--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
             <li><a href="">+38 096 111 11 11</a></li>
         </ul>
     </header>
+    <main>
     <div>
         <section>
             <h1>Эффективные решения вашего бизнеса</h1>
                 <a href="">Заказать услугу</a>
         </section>
     </div>
+</main>
     <section>
         <ul>
             <li><h2>Внимание к деталям</h2>
@@ -44,6 +46,20 @@
         <li><h2>Современные технологии</h2>
         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
     </li>
+        </ul>
+    </section>
+    <section>
+        <h3>Чем мы занимаемся</h3>
+        <ul>
+            <li>
+                <img src="images/1.svg.jpg" alt="" width="370">
+            </li>
+                <li>
+                <img src="images/2.svg.jpg" alt="" width="370">
+            </li>
+            <li>
+            <img src="images/3.svg.jpg" alt="" width="370">
+            </li>
         </ul>
     </section>
     
