--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <header>
         <nav>
-        <a href=>
-        <img src="logo.svg">
-        </a>
+        <a href=""><img src="logo.svg" alt="logo"</a>
 
         <ul>
             <li><a href="">Студия</a></li>
@@ -62,6 +60,6 @@
             </li>
         </ul>
     </section>
-    
+
 </body>
 </html>
