--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,8 @@
 <body>
     <header>
         <nav>
-        <a href=""><img src="logo.svg" alt="logo"</a>
+        <a href="">
+        <img src="logo.svg" alt="логотип компании" width="145">
 
         <ul>
             <li><a href="">Студия</a></li>
@@ -29,7 +30,6 @@
                 <a href="">Заказать услугу</a>
         </section>
     </div>
-</main>
     <section>
         <ul>
             <li><h2>Внимание к деталям</h2>
@@ -50,16 +50,43 @@
         <h3>Чем мы занимаемся</h3>
         <ul>
             <li>
-                <img src="images/1.svg.jpg" alt="" width="370">
+                <img src="images/1.svg.jpg" alt="работа над кодом вашего сайта" width="370">
             </li>
                 <li>
-                <img src="images/2.svg.jpg" alt="" width="370">
+                <img src="images/2.svg.jpg" alt="работа над оформлением вашего сайта" width="370">
             </li>
             <li>
-            <img src="images/3.svg.jpg" alt="" width="370">
-            </li>
+            <img src="images/3.svg.jpg" alt="вибор цветових оттенков для вашего сайта" width="370">
+            </li>  
         </ul>
     </section>
-
+    <section>
+            <h4>Наша команда</h4>
+        <ul>
+            <li><img src="images/igor.png" alt="фото сотрудника" width="270">
+                <h5>Игорь Демьяненко</h5>
+                <p>Product Designer</p>
+            </li>
+            <li><img src="images/olga.jpg" alt="фото сотрудника" width="270">
+                <h5>Ольга Репина</h5>
+                <p>Frontend Developer</p>
+            </li><li><img src="images/nikolai.jpg" alt="фото сотрудника" width="270">
+                <h5>Николай Тарасов</h5>
+                <p>Marketing</p>
+            </li><li><img src="images/igor.png" alt="фото сотрудника" width="270">
+                <h5>Михаил Ермаков</h5>
+                <p>UI Designer</p>
+            </li>
+        </ul>  
+    </section>
+</main>
+    <footer>
+        <img src="logo.svg" alt="логотип компании" width="145">
+        <ul>
+            <li><a href=""></a>г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href=""></a>info@example.com</a></li>
+            <li><a href=""></a>+38 099 111 11 11</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
