--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <header>
         <nav>
-        <a href="">
-        <img src="logo.svg" alt="логотип компании" width="145">
-
+        <a href=""><img src="logo.svg" alt="логотип компании" width="145"></a>
         <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
@@ -83,9 +81,9 @@
     <footer>
         <img src="logo.svg" alt="логотип компании" width="145">
         <ul>
-            <li><a href=""></a>г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href=""></a>info@example.com</a></li>
-            <li><a href=""></a>+38 099 111 11 11</a></li>
+            <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="">info@example.com</a></li>
+            <li><a href="">+38 099 111 11 11</a></li>
         </ul>
     </footer>
 </body>
