--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div>
         <section>
             <h1>Эффективные решения вашего бизнеса</h1>
-                <a href="">Заказать услугу</a>
+                <button>Заказать услугу</button>
         </section>
     </div>
     <section>
@@ -71,7 +71,7 @@
             </li><li><img src="images/nikolai.jpg" alt="фото сотрудника" width="270">
                 <h5>Николай Тарасов</h5>
                 <p>Marketing</p>
-            </li><li><img src="images/igor.png" alt="фото сотрудника" width="270">
+            </li><li><img src="images/mykhaylo.jpg" alt="фото сотрудника" width="270">
                 <h5>Михаил Ермаков</h5>
                 <p>UI Designer</p>
             </li>
@@ -79,7 +79,7 @@
     </section>
 </main>
     <footer>
-        <img src="logo.svg" alt="логотип компании" width="145">
+    <a href="#"><img src="logo.svg" alt="логотип компании" width="145"></a>
         <ul>
             <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
             <li><a href="">info@example.com</a></li>
