--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section>
             <h4>Наша команда</h4>
         <ul>
-            <li><img src="images/igor.png" alt="фото сотрудника" width="270">
+            <li><img src="images/igor2.jpg" alt="фото сотрудника" width="270">
                 <h5>Игорь Демьяненко</h5>
                 <p>Product Designer</p>
             </li>
