--- a/index.html
+++ b/index.html
@@ -29,22 +29,24 @@
         </section>
     </div>
     <section>
+        <h2>Наши достоинства</h2>
         <ul>
-            <li><h2>Внимание к деталям</h2>
+            <li><h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
-            <li><h2>Пунктуальность</h2>
+            <li><h3>Пунктуальность</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
          </li>
-         <li><h2>Планирование</h2>
+         <li><h3>Планирование</h3>
         <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
-        <li><h2>Современные технологии</h2>
+        <li><h3>Современные технологии</h3>
         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
     </li>
         </ul>
     </section>
     <section>
+        <h2>Рабочий процесс</h2>
         <h3>Чем мы занимаемся</h3>
         <ul>
             <li>
@@ -59,20 +61,20 @@
         </ul>
     </section>
     <section>
-            <h4>Наша команда</h4>
+            <h2>Наша команда</h2>
         <ul>
             <li><img src="images/igor2.jpg" alt="фото сотрудника" width="270">
-                <h5>Игорь Демьяненко</h5>
+                <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
             <li><img src="images/olga.jpg" alt="фото сотрудника" width="270">
-                <h5>Ольга Репина</h5>
+                <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li><li><img src="images/nikolai.jpg" alt="фото сотрудника" width="270">
-                <h5>Николай Тарасов</h5>
+                <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li><li><img src="images/mykhaylo.jpg" alt="фото сотрудника" width="270">
-                <h5>Михаил Ермаков</h5>
+                <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
             </li>
         </ul>  
