--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <footer>
     <a href="#"><img src="logo.svg" alt="логотип компании" width="145"></a>
         <ul>
-            <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
             <li><a href="">info@example.com</a></li>
             <li><a href="">+38 099 111 11 11</a></li>
         </ul>
