--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-        <a href=""><img src="logo.svg" alt="логотип компании" width="145"></a>
+        <a href="WebStudio">WebStudio</a>
         <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
@@ -17,15 +17,15 @@
         </ul>
         </nav>
         <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
+            <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
     <div>
         <section>
             <h1>Эффективные решения вашего бизнеса</h1>
-                <button>Заказать услугу</button>
+                <button type="button" value>Заказать услугу</button>   
         </section>
     </div>
     <section>
@@ -46,8 +46,7 @@
         </ul>
     </section>
     <section>
-        <h2>Рабочий процесс</h2>
-        <h3>Чем мы занимаемся</h3>
+        <h2>Чем мы занимаемся</h2>
         <ul>
             <li>
                 <img src="images/1.svg.jpg" alt="работа над кодом вашего сайта" width="370">
@@ -81,12 +80,14 @@
     </section>
 </main>
     <footer>
-    <a href="#"><img src="logo.svg" alt="логотип компании" width="145"></a>
+        <address>
+    <a href="#">WebStudio</a>
         <ul>
-            <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
-            <li><a href="">info@example.com</a></li>
-            <li><a href="">+38 099 111 11 11</a></li>
+            <li><a href="г.Киев,пр-тЛесиУкраинки,26">г. Киев, пр-т Леси Украинки, 26</a>
+            <li><a href="info@example.com">info@example.com</a></li>
+            <li><a href="+380991111111">+38099 111 11 11</a></li>
         </ul>
+        </address>
     </footer>
 </body>
 </html>
