--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </main>
     <footer>
         <address>
-    <a href="#">WebStudio</a>
+    <a href="WebStudio">WebStudio</a>
         <ul>
             <li><a href="г.Киев,пр-тЛесиУкраинки,26">г. Киев, пр-т Леси Украинки, 26</a>
             <li><a href="info@example.com">info@example.com</a></li>
